Ajustes de componente NewAddressPage para limitar el maximo de digitos en codigo postal

--- a/src/pages/PanelUser/02Addresses/NewAddress/styles.module.css
+++ b/src/pages/PanelUser/02Addresses/NewAddress/styles.module.css
@@ -53,6 +53,25 @@
     border-radius: 10px;
     width: 300px;
 }
+.alert__Danger {
+    color: #e63946;
+    border-radius: 5px;
+    bottom: 50px;
+    left: 50px;
+    right: 50px;
+    padding: 5px 10px;
+    z-index: 1;
+}
+.alert__Success {
+    color: #4c956c;
+    border-radius: 5px;
+    bottom: 50px;
+    left: 50px;
+    right: 50px;
+    padding: 5px 10px;
+    z-index: 1;
+    font-weight: 600;
+}
 .button__Submit {
     opacity: 0.75;
     padding: 10px 20px;
