--- a/src/components/LandingEcommerce/08Trends/styles.module.css
+++ b/src/components/LandingEcommerce/08Trends/styles.module.css
@@ -6,13 +6,13 @@
     color: #495057;
 }
 .container__Trends {
+    min-height: 240px;
     flex-wrap: wrap;
 }
 .container__Trend {
-    height: 200px;
     width: 180px;
 }
-.trend {
+.container__Image_Trend {
     background: rgba(233, 236, 239, 0.3);
     border-radius: 50%;
     height: 170px;
@@ -21,18 +21,23 @@
     align-items: center;
     justify-content: center;
 }
-.trend:hover {
+.container__Image_Trend:hover {
     background: rgba(233, 236, 239, 1);
+
+    image__Trend {
+        transform: scale(1.05);
+    }
 }
 .image__Trend {
     height: 100px;
 }
 .title__Trend {
     color: #e4002b;
+    min-height: 65px;
+    width: 180px;
 }
 .background__Image {
     z-index: -1;
-    top: 250px;
     right: 25%;
     width: 50%;
     color: rgba(233, 236, 239, 0.1);
