--- a/src/pages/Landing/01NavBar/02NavBar/01ShoppingCart/styles.module.css
+++ b/src/pages/Landing/01NavBar/02NavBar/01ShoppingCart/styles.module.css
@@ -9,7 +9,7 @@
 .container__Cart_Table {
     width: 1050px;
 }
-.column__Product, .column__Price, .column__Quantity, .column__Total, .column_Delete {
+.column__Product, .column__Price, .column__Quantity, .column__Total, .column__Delete {
     color: #e4002b;
     font-weight: 600;
     padding: 5px 10px;
@@ -26,7 +26,7 @@
 .column__Total {
     width: 200px;
 }
-.column_Delete {
+.column__Delete {
     width: 50px;
 }
 
@@ -113,7 +113,7 @@
     cursor: pointer;
     color: #e4002b;
 }
-.icon_Delete {
+.icon__Delete {
     font-size: 20px;
 }
 .price__Product, .quantity__Product, .subtotal__Product {
@@ -162,6 +162,14 @@
 }
 .title:last-child, .data:last-child {
     border-bottom: none;
+}
+.button__Quote {
+    color: #fff;
+    padding: 10px 20px;
+    background: #e63946;
+}
+.container__Submit {
+    border: 1px solid red;
 }
 .button__Submit {
     background: #d4d6d8;
