--- a/src/pages/Landing/01NavBar/02NavBar/04Login/styles.module.css
+++ b/src/pages/Landing/01NavBar/02NavBar/04Login/styles.module.css
@@ -34,6 +34,9 @@
 .icon:hover {
     cursor: pointer;
 }
+.container__Loading {
+    width: 100%;
+}
 .button__Submit {
     width: 100%;
     padding: 7px 25px;
